# toggl-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE.md  README.md  README.zh-CN.md  dist-workspace.toml  package-lock.json
.claude/: ralph-loop.local.md
.claude/agent-memory/cli-ux-evaluator/: MEMORY.md
.claude/agents/: cli-ux-evaluator.md
.factory/: init.sh  services.yaml
.factory/skills/cli-worker/: SKILL.md
.factory/validation/auth-provider-ux/scrutiny/: synthesis.json
.factory/validation/auth-provider-ux/scrutiny/reviews/: auth-provider-session-redesign.json  (+4 more)
.factory/validation/core-cli-foundation/scrutiny/: synthesis.json
.factory/validation/core-cli-foundation/user-testing/: synthesis.json
.factory/validation/workspace-admin-config/scrutiny/: synthesis.json
.github/workflows/: ci.yml  pull_request.yml  release.yml
pkg/scoop/: toggl-cli.json
skills/toggl-cli/: SKILL.md
src/: arguments.rs  constants.rs  credentials.rs  error.rs  main.rs  models.rs  utilities.rs
src/api/: client.rs  models.rs
src/commands/: archive_project.rs  auth.rs  auth_status.rs  bulk_edit_time_entries.rs  common.rs  cont.rs  create_client.rs  create_project.rs  create_tag.rs  create_task.rs  create_workspace.rs  delete.rs  delete_client.rs  delete_project.rs  delete_tag.rs  delete_task.rs  edit.rs  list.rs  me.rs  mod.rs  organization.rs  preferences.rs  rename_client.rs  rename_project.rs  rename_tag.rs  rename_workspace.rs  report.rs  running.rs  search.rs  show.rs  start.rs  stop.rs  test_utils.rs  update_preferences.rs  update_task.rs
src/config/: locate.rs  model.rs
tests/: live_cli.rs
(+11 files in other folders)
