[package]
name = "toggl"
version = "0.7.6"
authors = [
  "CorrectRoadH <tylerchc92@gmail.com>",
  "Shantanu Raj <s@sraj.me>",
  "William Barbosa <heytherewill@gmail.com>"
]
categories = [
  "api-bindings",
  "command-line-utilities",
  "date-and-time",
]
description = "Unofficial command-line interface for Toggl Track using the v9 API."
homepage = "https://github.com/CorrectRoadH/toggl-cli"
keywords = ["cli", "time", "time-tracking", "toggl", "track"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CorrectRoadH/toggl-cli"
edition = "2021"

[dependencies]
# Argument parsing
clap = { version = "4.5", features = ["derive", "env", "suggestions"] }

# Terminal utilities
colored = "2.0.0"
colors-transform = "0.2.11"

# Storage
keyring = { version = "2", features = ["linux-default-keyutils"] }

# Config
directories = "5.0.0"
lazy_static = "1.4.0"
once_cell = "1.19"
regex = "1.7.3"
toml = "0.7.3"

# API
dotenvy = "0.15"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["preserve_order"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.27.0", features = ["full"] }
base64 = "0.21.0"
async-trait = "0.1.68"

# Models
chrono = { version = "0.4.24", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
skim = "0.10.4"

[dev-dependencies]
# Testing
mockall = "0.11.4"
tokio-test = "0.4.2"

[package.metadata.dist]
# Config lives in dist-workspace.toml

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
